Corrected create button

--- a/todo/templates/todo/createtodo.html
+++ b/todo/templates/todo/createtodo.html
@@ -28,8 +28,7 @@
                 <label class="form-check-label" for="id_important">
                     Important
                 </label>
-                <input class="form-check-input" type="checkbox" value=""  name="important" id="id_important">
-
+                <input class="form-check-input" type="checkbox"  name="important" id="id_important">
             </div>
 
             <div class="text-center">
