--- a/todo/templates/todo/createtodo.html
+++ b/todo/templates/todo/createtodo.html
@@ -25,10 +25,10 @@
             </div>
 
             <div class="form-check">
-                <label class="form-check-label" for="id_important">
+                <label class="form-check-label" for="important">
                     Important
                 </label>
-                <input class="form-check-input" type="checkbox"  name="important" id="id_important">
+                <input class="form-check-input" type="checkbox"  name="important" id="important">
             </div>
 
             <div class="text-center">
